system/traefik/resources/custom-error-pages/resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: custom-error-pages

spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-error-pages
  template:
    metadata:
      labels:
        app: custom-error-pages
    spec:
      containers:
        - name: app
          image: guillaumebriday/traefik-custom-error-pages
          ports:
            - containerPort: 80
