system/traefik/resources/custom-error-pages/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-error-pages

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: custom-error-pages
