system/traefik/resources/custom-error-pages/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: custom-error-pages

spec:
  routes:
    - kind: Rule
      match: HostRegexp(`(.+\.)?starry\.blue$`)
      priority: 1
      services:
        - name: custom-error-pages
          port: 80
      middlewares:
        - name: redirect-to-404

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-404

spec:
  replacePathRegex:
    regex: ".*"
    replacement: /404.html
